--- a/src/FV.PaymentCalculator.Core/FV.PaymentCalculator.Core.csproj
+++ b/src/FV.PaymentCalculator.Core/FV.PaymentCalculator.Core.csproj
@@ -1,72 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A3EBC87E-8975-4D7D-A1A6-27834E3A2645}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FV.PaymentCalculator.Core</RootNamespace>
-    <AssemblyName>FV.PaymentCalculator.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DTOs\Base\RequestBase.cs" />
-    <Compile Include="DTOs\Base\ResponseBase.cs" />
-    <Compile Include="DTOs\CalcPaymentData.cs" />
-    <Compile Include="DTOs\CalcPaymentItem.cs" />
-    <Compile Include="DTOs\CalcPaymentRequest.cs" />
-    <Compile Include="DTOs\CalcPaymentResponse.cs" />
-    <Compile Include="Factory\CalcEnum.cs" />
-    <Compile Include="Factory\CalcServiceFactory.cs" />
-    <Compile Include="Factory\ICalcServiceFactory.cs" />
-    <Compile Include="Interfaces\ICalcINSSService.cs" />
-    <Compile Include="Interfaces\ICalcIRRFService.cs" />
-    <Compile Include="Interfaces\ICalcOtherDiscountsService.cs" />
-    <Compile Include="Interfaces\ICalcPaymentValidatorService.cs" />
-    <Compile Include="Interfaces\ICalcService.cs" />
-    <Compile Include="Observer\CalculateSubject.cs" />
-    <Compile Include="Observer\ICalculateObserver.cs" />
-    <Compile Include="Observer\ICalculateSubject.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\CalcINSSService.cs" />
-    <Compile Include="Services\CalcIRRFService.cs" />
-    <Compile Include="Services\CalcOtherDiscountsService.cs" />
-    <Compile Include="Services\CalcPaymentValidatorService.cs" />
-    <Compile Include="Services\CalcService.cs" />
-    <Compile Include="Utils\Messages.cs" />
-    <Compile Include="Utils\TaxConfiguration.cs" />
-    <Compile Include="Utils\TaxItem.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
+	
 </Project>
